Fixed sonar lint issue.